updated summary, added print.css

--- a/_posts/resume/2014-10-01-amplifi.md
+++ b/_posts/resume/2014-10-01-amplifi.md
@@ -5,9 +5,7 @@ location: San Francisco Bay Area
 categories: experience
 ---
 
-* Principal architect for BOLT: a rapid-development platform for Oracle Commerce.
-* Significantly reduced the cost of change and time-to-live for Oracle Commerce.
-* Introduced agile project management, pair-programming, code-review, test-driven-development, continuous-integration and continuous-delivery processes.
-* Created a suite of command-line tools to automate repetitive development and deployment tasks.
-* Reduced initial developer ramp-up time per-project by 90%.
+* Principal architect for an in-house, rapid-development platform for Oracle Commerce, which reduced the cost of change and time-to-live for new projects by 50%.
+* Created a suite of tools to automate repetitive development and deployment tasks, reducing initial developer ramp-up time per-project by 90%.
 * Used linux containers (Docker) to isolate and scale each service in the Oracle Commerce application stack, both on bare metal and cloud servers.
+* Introduced agile project management, pair-programming, code-review, test-driven-development, continuous-integration and continuous-delivery processes using JIRA, Screenhero, Bitbucket pull-requests, RSpec/Groovy/Jasmine and Jenkins.
