--- a/_posts/resume/2015-06-15-summary.md
+++ b/_posts/resume/2015-06-15-summary.md
@@ -3,10 +3,13 @@ categories: summary
 ---
 
 Software and systems architect, inventor, and mentor (MBTI: INFJ),
-with 15 years professional experience creating patent-ed/-able
+with over 15 years professional experience creating patent-ed/-able
 products and services for startups, agencies, and F500 companies.
 Expert in over 20 unique computer languages.
 
-Attracted to telecommute-friendly roles where agile processes, automation
-and continuous improvement may be promoted, not only in software and systems,
-but throughout the organization.
+Professional interests include software security, machine intelligence
+(esp. cortical learning algorithms), API development, test-automation,
+continuous-improvement, continuous-delivery and agile processes in-general.
+
+Personal interests include home-automation and IoT, hiking, cycling, gaming
+and using LEGO Mindstorms to teach AI/robotics to kids.
