--- a/_posts/resume/2015-06-15-summary.md
+++ b/_posts/resume/2015-06-15-summary.md
@@ -5,11 +5,13 @@ categories: summary
 Software and systems architect, inventor, and mentor (MBTI: INFJ),
 with over 15 years professional experience creating patent-ed/-able
 products and services for startups, agencies, and F500 companies.
+Proven track-record leading remote and distributed teams.
 Expert in over 20 unique computer languages.
 
 Professional interests include software security, machine intelligence
-(esp. cortical learning algorithms), API development, test-automation,
-continuous-improvement, continuous-delivery and agile processes in-general.
+(esp. cortical learning algorithms), API development, BDD/TDD/ATDD,
+test-automation, continuous-improvement, continuous-delivery, pair-programming,
+and agile project management.
 
 Personal interests include home-automation and IoT, hiking, cycling, gaming
 and using LEGO Mindstorms to teach AI/robotics to kids.
