Added music, removed LEGO from summary

--- a/_posts/resume/2015-06-15-summary.md
+++ b/_posts/resume/2015-06-15-summary.md
@@ -13,5 +13,5 @@ Professional interests include software security, machine intelligence
 test-automation, continuous-improvement, continuous-delivery, pair-programming,
 and agile project management.
 
-Personal interests include home-automation and IoT, hiking, cycling, gaming
-and using LEGO Mindstorms to teach AI/robotics to kids.
+Personal interests include music, home-automation and IoT, hiking, cycling,
+gaming, and teaching AI/robotics to kids.
